--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Nav Section-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/img/CODE 4.svg" class="d-inline-block align-text-top" alt="Kraken Symbol" width="30" height="24"> Code 4 Coding</a>
+        <a class="navbar-brand" href="#"><img src="/img/CODE 4.svg" class="d-inline-block align-text-top" alt="CODE 4 Shield" width="30" height="24"> Code 4 Coding</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -51,8 +51,10 @@
        <div class="container col-xxl-8 px-4 py-5">
            <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                <div class="col order-last order-lg-first">
-                   <h1 class="display-5 fw-bold lh-1 mb-3">Code 4 Coding: A Coding Story</h1>
-                   <h4 class="lead">Live life one loop at a time. A Coding exercise using loops. Write an app that displays the numbers form 0 to 100.  Display the even numbers <strong> in bold.</h4>
+                   <h1 class="display-5 fw-bold lh-1 mb-3">Code 4 Coding: Alohomora, opening your mind.</h1>
+                   <h4 class="lead">The use of Alohomora allows you to unlock the power of the loop along with javascript. This is a javascript coding exercise using loops.  
+                       Write a program that prints numbers from 1 to 100 and for multiples of 3 display "Aloho" instead of the number and for the multiples of "5" displays "Mora".  
+                       If a multiple of both integers then it displays <strong>"Alohomora" </strong>and opens all locks for you. <strong></h4>
                    <ul class="fa-ul pt-2 checklist"></strong>
                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap</li>
                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>javascript Fundamentals</li>
@@ -61,7 +63,6 @@
                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript DOM Manipulation</li>
                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript if/then/else</li>
                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Boolean Logic</li>
-                       <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap</li>
                    </ul>
                    <div>
                       <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2" href="app.html">Try It!</a> 
