--- a/app.html
+++ b/app.html
@@ -51,9 +51,10 @@
         <div class="container mt-5">
 <div class="row row-cols-1 row-cols-lg-2">
     <div class="col-lg-4 col border-end border-2">
-        <h1>HUNDO: A Coding Project</h1>
+        <h1>Alohomora: A Coding Project with some zap in it</h1>
         <h4 class="lead">
-            Live life one loop at a time.  Javascript coding exercise where the program displays the numbers from 0-100.  
+            Live life one loop at a time to power our spells.  Javascript coding exercise where the program displays integers, 
+            and when they are divisable equally by a number, they show the names of spells.  
         </h4>
         <h2 class="mt-5 border-bottom border-2">Instructions</h2>
         <p>Enter a starting Value and a ending value. Press the button and the value will appear.</p>
@@ -64,14 +65,14 @@
             <h5>Enter Values</h5>
             <form class="row gy-2 gx-3">
                 <div class="col">
-                    <input type="number" id="startValue" class="form-control" placeholder="Start Value" value="0" aria-label="Start Value">
+                    <input type="number" id="fizzValue" class="form-control" placeholder="Enter Number" value="3" aria-label="fizzValue">
                 </div>
                 <div class="col">
-                    <input type="number" id="endValue" class="form-control" placeholder="End Value" value="100" aria-label="End Value">
+                    <input type="number" id="buzzValue" class="form-control" placeholder="Enter Number" value="5" aria-label="buzzValue">
 
                 </div>
                 <div class="col-12 d-flex justify-content-end">
-                    <button type="button" id="btnSubmit" class="btn btn-dark btn-lg">Display HONDU</button>
+                    <button type="button" id="btnSubmit" class="btn btn-dark btn-lg">Display Spell</button>
                 </div>
             </form>
             <h2 class="mt-5 border-bottom border-2">Results</h2>
@@ -116,11 +117,25 @@
             </div>
         </div>
     </footer>
+
+    <template id="fbTemplate">
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </template>
+
      <!-- Bootstrap JS -->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
  </script>
  <script src="/js/site.js"></script>
+ <script>
+     document.getElementById("btnSubmit").addEventListener("click",getValues);
+ </script>
 
     </body>
 </html>
