--- a/app.html
+++ b/app.html
@@ -65,10 +65,10 @@
             <h5>Enter Values</h5>
             <form class="row gy-2 gx-3">
                 <div class="col">
-                    <input type="number" id="fizzValue" class="form-control" placeholder="Enter Number" value="3" aria-label="fizzValue">
+                    <input type="number" id="fizzValue" class="form-control" placeholder="Enter Number" value=3 aria-label="fizzValue">
                 </div>
                 <div class="col">
-                    <input type="number" id="buzzValue" class="form-control" placeholder="Enter Number" value="5" aria-label="buzzValue">
+                    <input type="number" id="buzzValue" class="form-control" placeholder="Enter Number" value=5 aria-label="buzzValue">
 
                 </div>
                 <div class="col-12 d-flex justify-content-end">
